--- a/test1.ipynb
+++ b/test1.ipynb
@@ -10,7 +10,9 @@
     }
    },
    "outputs": [],
-   "source": []
+   "source": [
+    "print(\"hello\")"
+   ]
   },
   {
    "cell_type": "code",
